--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 a.button {
 	margin:10px 10px;
-	overflow: visible;
+	overflow: hidden;
 	padding: 8px 10px;
 	font-size: 14px;
 	line-height: 15px;
