--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ a.button {
 	padding: 8px 10px;
 	font-size: 14px;
 	line-height: 15px;
-	color: #fff;
+	color: #000;
 	background: #297d9c;
 	display: block;
 	width: 100px;
